--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <main class="container"> 
     <img src="./images/image-qr-code.png" alt="QR code with a blue background color" class="qr-image">
 
-    <div class="description">
+    <section class="description">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+    </section>
   </main>
 </body>
 </html>
