--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <main class="container"> 
-    <img src="./images/image-qr-code.png" alt="QR code with a blue background color" class="qr-image">
-
-    <section class="description">
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </section>
-  </main>
+  <div class="container">
+    <main id="qr-component"> 
+      <img src="./images/image-qr-code.png" alt="QR code with a blue background color" class="qr-image">
+  
+      <section class="description">
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
